feat: add dto, mapper and post method to register new student

--- a/src/main/resources/db/changelog/v0000/2024-04-04-01.yaml
+++ b/src/main/resources/db/changelog/v0000/2024-04-04-01.yaml
@@ -16,14 +16,20 @@ databaseChangeLog:
                      name:  ID
                      type:  INT
                 - column:
-                    name: name
+                    name: StudentId
+                    type: BIGINT
+                - column:
+                    name: Name
                     type: varchar(255)
                 -  column:
-                    name: email
+                    name: Email
                     type: varchar(255)
                 - column:
-                    name: age
+                    name: Age
                     type: varchar(255)
                 - column:
-                    name: birthday
+                    name: Birthday
+                    type: varchar(255)
+                - column:
+                    name: createdAt
                     type: varchar(255)
