feat: add get method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.h2.console.settings.web-allow-others=true
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/update.yaml
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
