--- a/src/main/resources/db/changelog/v0000/2024-04-04-01.yaml
+++ b/src/main/resources/db/changelog/v0000/2024-04-04-01.yaml
@@ -5,7 +5,7 @@ databaseChangeLog:
        changes:
          -  createTable:
               schemaName: public
-              tableName: Student
+              tableName: STUDENT_INFO
               columns:
                 -  column:
                      autoIncrement: true
